Revert "Added tracking data. Added logic to show energy when not principal place of residence. Fixed month logic. Energy hidden by default. Moved class names to inside the tag driven by vertical. Fixed not using the base xpath in home."
This reverts commit 6cea6f79bc21251efac5a6226a466f85acb98453.

--- a/src/main/webapp/bundles/shared/leadCapture/less/styles.less
+++ b/src/main/webapp/bundles/shared/leadCapture/less/styles.less
@@ -2,11 +2,6 @@
 @sub-color: @sidebar-right-bg-color;
 @third-color: #008284;
 
-// Energy is not shown by default.
-.leadCapture-energy {
-  display: none;
-}
-
 .optional-tag {
   display: inline-block;
   text-transform: uppercase;
@@ -21,7 +16,7 @@
     margin-top: 20px;
     display: flex;
   }
-
+  
   .well.well-help {
     order: 2;
     background-color: @third-color;
@@ -46,7 +41,7 @@
     color: @third-color;
     position: relative;
   }
-
+  
   .radioBtn {
     order: 1;
     margin-top: 30px;
@@ -75,12 +70,12 @@
       }
     }
   }
-
+  
   .product-name {
     font-size: 18px;
     color: @sub-color;
   }
-
+  
   label {
     .tick-checkbox {
       position: absolute;
@@ -116,7 +111,7 @@
   }
 }
 
-@media(max-width: 767px) {
+@media(max-width: 767px) { 
   .lead-capture {
     .radioBtnContainer {
       display: block;
